<resources>
    <string name="app_name">Planta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_quanity">Select the quanity:</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup">SignUp</string>
    <string name="order">Order #</string>
    <string name="total_price">Total Price:</string>
    <string name="fullname">Fullname</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="add_new_address">Add new address</string>
    <string name="checkout">Checkout</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="save_address">Save Address</string>
    <string name="products">Products</string>
    <string name="total">Total:</string>
    <string name="note_cash_on_delivery">Note: Cash on Delivery</string>
    <string name="continue_to_checkout">Continue To CheckOut</string>
    <string name="your_shopping_bag_is_empty">Your shopping bag is empty.</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="accessories">Accessories</string>
    <string name="check_your_email">Check your email</string>
    <string name="we_have_sent_a_password_recover_instructions_to_your_email">We have sent a password recover instructions to your email.</string>
    <string name="did_not_receive_the_email_check_your_spam_filter">Did not receive the email ? Check your spam filter,</string>
    <string name="try_another_email_address">try another email address</string>
    <string name="or">or</string>
    <string name="back_to_login">Back to login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="send_instruction">Send Instruction</string>
    <string name="sign_up_with_email">Sign Up with email</string>
    <string name="login_here">Login Here</string>
    <string name="item_price">Item Price:</string>
    <string name="address">Address:</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_delete_it">Yes,delete it!</string>
    <string name="deleted">Deleted!</string>
    <string name="ok">OK</string>
    <string name="order_complete">Order Complete</string>
    <string name="warning">warning</string>
    <string name="access_location"><![CDATA[To access location go to setting-> allow location service]]></string>
    <string name="wishlist">WishList</string>
    <string name="order_history">My Orders</string>
    <string name="new_order">new order</string>
    <string name="item_added">Item added successfully</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="failed_to_sent">Failed to sent</string>
    <string name="logout">Logout successfully</string>
    <string name="myAddress">My Address</string>
    <string name="Please_Fill_all_Fields">Please Fill all Fields</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="search">search</string>
    <string name="CheckOut">CheckOut</string>
    <string name="planta">Planta</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="profile">profile</string>
    <string name="Please_select_address">Please select address</string>
    <string name="Oops">Oops...</string>
    <string name="Please_Login_to_add_to_cart">Please Login to add to cart</string>
    <string name="review_your_order">Review your order</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="free">Free</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="buy_now">Buy Now</string>
    <string name="shipped_to">Shipped to:</string>
</resources>